--- a/View/Index.html
+++ b/View/Index.html
@@ -6,6 +6,34 @@
     <title>Document</title>
 </head>
 <body>
-    <title></title>
+    <header>
+        <h1>Mi portafolio</h1>
+        <nav>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#proyectos">Proyectos</a></li>
+                <li><a href="#sobreMi">Sobre mí</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="inicio">
+        <h2>Bienvenido a mi portafolio</h2>
+        <p>Soy un desarrollador full-stack de Costa Rica. Acá encontrarás mis principales proyectos</p>
+    </section>
+
+    <section id="proyectos">
+        <h2>Mis proyectos</h2>
+        <div class="portafolio">
+            <h3>Este Portafolio</h3>
+            
+            <p>Este portafolio tambien es un proyecto</p>
+        </div>
+        <div class="yolillal">
+            <h3>Sistema de Transportes Yolillal</h3>
+            <p>Sistema de gestión interna de la empresa Transportes Yolillal</p>
+        </div>
+    </section>
 </body>
 </html>
